# GLECS

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Camera.h  Component.h  Debug.h  Entity.h  FileUtility.h  Span.h
include/assets/: Material.h  Mesh.h  ObjMesh.h  Shader.h
include/components/: MeshRenderer.h  Renderer.h  Transform.h
libs/: CMakeLists.txt
resources/: default_fragment.glsl  default_geometry.glsl  default_vertex.glsl
src/: CMakeLists.txt  Component.cpp  Entity.cpp  FileUtility.cpp
src/assets/: Material.cpp  Mesh.cpp  ObjMesh.cpp  Shader.cpp
src/components/: MeshRenderer.cpp  Transform.cpp
